Update README.md to include compilation and execution instructions; change section title for clarity